Fix some formatting quirks and improve layout.
Newlines are counted as spaces and thus some of the layout was formatted
with uneven margins. Particularly the links in the top right and the
information above the pastes. I fixed that by using unordered lists.
Furthermore, Chris Granger had some tips for laying things out better.
They included adding a horizontal margin of 50px and a little padding
on the left side of the line numbers.

--- a/resources/public/css/refheap.css
+++ b/resources/public/css/refheap.css
@@ -12,6 +12,7 @@ body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
     color: #DDD;
+    padding: 0 50px;
 }
 
 body#fullscreen {
@@ -45,7 +46,7 @@ a#site:active { text-decoration: none; }
 
 div.headerlinks {
     margin-top: 10px;
-    padding-right: 10px;
+    padding-right: 20px;
     float: right;
 }
 
@@ -55,7 +56,6 @@ div.headerlinks {
 
 .headerlinks a {
     font-size: 20px;
-    padding-right: 10px;
     text-decoration: none;
 }
 
@@ -65,6 +65,7 @@ div#useri {
 
 a#userbutton {
   font-weight: bold;
+  margin-right: 7px;
 }
 
 div#user {
@@ -258,16 +259,30 @@ div#pasteinfo {
     font-size: 11px;
 }
 
-.info {
-    padding: 0 10px 0 10px;
-    border-right: solid 1px black;
+.spacedlist {
+  padding: 0;
+  margin: 0;
+}
+
+.spacedlist li {
+  float: left;
+  display: inline;
+}
+
+#infolist li {
+  padding: 0 10px 0 10px;
+  border-right: solid 1px black;
+}
+
+#infolist {
+  float: left;
 }
 
 .private {
     color: #22aa22;
 }
 
-span#last {
+li#last {
     border-right: none;
 }
 
@@ -280,6 +295,10 @@ div.floater {
 .linenos div {
     color: gray;
     margin-right: 10px;
+}
+
+.linenodiv {
+  padding-left: 3px;
 }
 
 .linenodiv a {
@@ -307,11 +326,12 @@ a#newer {
     margin-right: 10px;
 }
 
-a.borderedbutton {
-  border-right: 1px solid #DDD;
+#starting li {
+  margin-right: 10px;
   padding-right: 10px;
-  margin-right: 8px;
+  border-right: 1px solid #DDD;
 }
+
 .pagebutton {
     font-size: 15px;
     padding: 5px 10px;
